test/langtools/tools/javac/Diagnostics/7039014/T7039014b.out
T7039014b.java:16:5: compiler.err.incompatible.diff.ret.same.type: T7039014b.A<java.lang.String>, m, java.lang.String
1 error
